Layout: About page, tweaks

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,10 +10,13 @@
 
 <body>
   <nav>
-    <div class="nav-items"><span class="nav-item"><a href="./about.html">About</a></span></div>
+    <div class="nav-items">
+      <span class="nav-item"><a href="./index.html">Home</a></span>
+      <span class="nav-item"><a href="./about.html">About</a></span>
+    </div>
   </nav>
   <div class="header">
-    <h1>Snaps For Progress</h1>
+    <a href="./index.html"><h1>Snaps For Progress</h1></a>
     <div class="subheader">
       <span class="ghost-emoji">&#x1F47B;</span>
       Campaign filters for all your millennial needs
