--- a/public/stylesheets/compiled/main.css
+++ b/public/stylesheets/compiled/main.css
@@ -8,18 +8,33 @@ body a:visited,
 body a:hover {
   text-decoration: none;
   color: blue;
+  cursor: pointer;
 }
 nav {
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  cursor: default;
   background-color: #f8f8f8;
   height: 30px;
   text-align: right;
 }
 nav .nav-items {
   text-align: right;
-  padding-top: 4px;
+  padding-top: 5px;
   padding-right: 10px;
 }
+nav .nav-items .nav-item {
+  display: inline-block;
+  margin-right: 10px;
+}
 .header {
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  cursor: default;
   background-color: #0050a9;
   width: 100%;
   height: 180px;
@@ -51,4 +66,11 @@ nav .nav-items {
 }
 .content {
   margin: 20px 130px;
+}
+h2 {
+  font-size: 20px;
+  margin: 36px 0px 20px 0px;
+}
+p {
+  margin-left: 10px;
 }
