--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -7,24 +7,38 @@ body {
   a, a:visited, a:hover {
       text-decoration: none;
       color: blue;
+      cursor: pointer;
   }
 }
 
 
 nav {
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    cursor: default;
+
     background-color: #f8f8f8;
     height: 30px;
     text-align: right;
     .nav-items {
         text-align: right;
-        padding-top: 4px;
+        padding-top: 5px;
         padding-right: 10px;
         .nav-item {
-
+            display: inline-block;
+            margin-right: 10px;
         }
     }
 }
 .header {
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    cursor: default;
+
     background-color: #0050a9;
     width: 100%;
     height: 180px;
@@ -57,3 +71,15 @@ nav {
 .content {
     margin: 20px 130px;
 }
+
+h2 {
+    font-size: 20px;
+    margin: 36px 0px 20px 0px
+}
+p {
+    margin-left: 10px;
+}
+
+
+
+
