--- a/public/stylesheets/compiled/main.css
+++ b/public/stylesheets/compiled/main.css
@@ -35,9 +35,10 @@ nav .nav-items .nav-item {
   -ms-user-select: none;
   -moz-user-select: none;
   cursor: default;
+  min-width: 750px;
   background-color: #0050a9;
   width: 100%;
-  height: 180px;
+  height: 200px;
   border-bottom: 10px solid red;
 }
 .header h1 {
