--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -38,10 +38,11 @@ nav {
     -ms-user-select: none;
     -moz-user-select: none;
     cursor: default;
+    min-width: 750px;
 
     background-color: #0050a9;
     width: 100%;
-    height: 180px;
+    height: 200px;
     border-bottom: 10px solid red;
     h1 {
         color: white;
