Content: Stub content

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,17 @@
 {% extends "layout.html" %}
 
 {% block body %}
-hello world
+
+<h2>Enabling a filter for your event</h2>
+<p>A step by step guide to using these filters for your next campaign event! <i>(under progress)</i></p>
+
+<h2>Help! Snapchat for non-millennials</h2>
+<p>An explanation of what a filter is, why you might want one, and how to not be basic. <i>(under progress)</i></p>
+
+<h2>When and where</h2>
+<p>Millennial-vetted ideas for how to use these filters in ways other millennials will appreciate.<i>(under progress)</i></p>
+
+<h2>The filters!</h2>
+<p>TODO</p>
+
 {% endblock %}
