Content: Add first filter!

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -80,7 +80,25 @@ h2 {
 p {
     margin-left: 10px;
 }
-
+.filters-section {
+    margin-left: 10px;
+    .filter-name {
+        margin-bottom: 21px;
+        font-weight: 700;
+        text-transform: uppercase;
+        border-bottom: 1px solid #bbb;
+        padding-bottom: 7px;
+        margin-top: 30px;
+        .download {
+            text-transform: lowercase;
+            font-size: .8em;
+        }
+    }
+    img {
+        border: 1px solid #d7d7d7;
+        background-color: lightgray;
+    }
+}
 
 
 
