--- a/public/stylesheets/compiled/main.css
+++ b/public/stylesheets/compiled/main.css
@@ -75,3 +75,22 @@ h2 {
 p {
   margin-left: 10px;
 }
+.filters-section {
+  margin-left: 10px;
+}
+.filters-section .filter-name {
+  margin-bottom: 21px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-bottom: 1px solid #bbb;
+  padding-bottom: 7px;
+  margin-top: 30px;
+}
+.filters-section .filter-name .download {
+  text-transform: lowercase;
+  font-size: .8em;
+}
+.filters-section img {
+  border: 1px solid #d7d7d7;
+  background-color: lightgray;
+}
