Content: Fill out why when and where

--- a/public/stylesheets/compiled/main.css
+++ b/public/stylesheets/compiled/main.css
@@ -74,6 +74,7 @@ h2 {
 }
 p {
   margin-left: 10px;
+  line-height: 1.4em;
 }
 .filters-section {
   margin-left: 10px;
@@ -93,4 +94,13 @@ p {
 .filters-section img {
   border: 1px solid #d7d7d7;
   background-color: lightgray;
+}
+ul {
+  list-style-type: circle;
+  margin-left: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+ul li {
+  line-height: 1.4em;
 }
