--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -79,6 +79,7 @@ h2 {
 }
 p {
     margin-left: 10px;
+    line-height: 1.4em;
 }
 .filters-section {
     margin-left: 10px;
@@ -99,6 +100,14 @@ p {
         background-color: lightgray;
     }
 }
-
+ul {
+    list-style-type: circle;
+    margin-left: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    li {
+        line-height: 1.4em;
+    }
+}
 
 
