--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,20 @@
 <h2>Enabling a filter for your event</h2>
 <p>A step by step guide to using these filters for your next campaign event! <i>(in progress)</i></p>
 
-<h2>Help! Snapchat for non-millennials</h2>
-<p>An explanation of what a filter is, why you might want one, and how to not be basic. <i>(in progress)</i></p>
+<h2>Why? Snapchat for non-millennials</h2>
+<p>Millennials use Snapchat to take ugly selfies (and other pics) that expire in 10 seconds to send their 30 closest friends. When the typical Millennial is out and about, they have share what they are doing on social media, otherwise it never happened. Using Snapchat Filters in their Snaps lets their friends know where they are, without having to explicitly say where they are. Filters makes photos more fun and adds an element of accomplishment. You have to be in a specific area to unlock certain filters, giving a feeling of instant gratification and achievement.</p>
 
-<h2>When and where</h2>
-<p>Millennial-vetted ideas for how to use these filters in ways other millennials will appreciate.<i>(in progress)</i></p>
+<h2>When and where?</h2>
+    <p>Millennial-vetted ideas for how to use these filters in ways other millennials will appreciate.
+    <ul>
+        <li>At any campaign event (fundraiser, dinner, rally, speaker, volunteer headquarters, etc)</li>
+        <li>At any political event (voter registration drives, debate parties, etc)</li>
+        <li>At any event or location with millennials (popular tourist location, college campus, etc)</li>
+    </ul>
+    <p>Then, millennials at these events will send pictures with your filter to their friends and feel validated.</p>
+</p>
 
-<h2>How to contribute</h2>
-<p>Reach out to me (<a href="https://twitter.com/sophiawestwood">@sophiawestwood</a>) on Twitter with ideas / filters</p>
-
-<h2>The filters</h2>
+<h2>The filters!</h2>
 <p>Open and free to distribute.</p>
     <div class="filters-section">
         {% for filter in [
@@ -43,5 +47,9 @@
             </div>
             <div><i>(in progress)</i></div>
         </div>
+
+<h2>How to contribute</h2>
+<p>Reach out to me (<a href="https://twitter.com/sophiawestwood">@sophiawestwood</a>) on Twitter with ideas / new filters.</p>
+
 </div>
 {% endblock %}
