--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -118,7 +118,7 @@ h2 {
 }
 p {
     margin-left: 10px;
-    line-height: 1.4em;
+    line-height: 1.7em;
 }
 .filters-section {
     margin-left: 10px;
@@ -145,16 +145,19 @@ ul {
     margin-top: 10px;
     margin-bottom: 10px;
     li {
-        line-height: 1.4em;
+        line-height: 1.7em;
     }
 }
 ol {
-    list-style-type: initial;
+    list-style-type: decimal;
     margin-left: 50px;
     margin-top: 10px;
     margin-bottom: 10px;
     li {
-        line-height: 1.4em;
+        line-height: 1.7em;
+    }
+    ol {
+        margin-top: 0px;
     }
 }
 
