Make headers divs, hack for better mobile

--- a/public/stylesheets/compiled/main.css
+++ b/public/stylesheets/compiled/main.css
@@ -104,7 +104,7 @@ nav .nav-items .nav-item {
 .content {
   margin: 20px 130px;
 }
-h2 {
+.section-header {
   font-size: 20px;
   font-weight: 700;
   margin: 36px 0px 20px 0px;
