--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -111,7 +111,7 @@ nav {
     margin: 20px 130px;
 }
 
-h2 {
+.section-header {
     font-size: 20px;
     font-weight: 700;
     margin: 36px 0px 20px 0px
