--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<h2>The filters!</h2>
+<div class="section-header">The filters!</div>
 <p>Open and free to distribute.</p>
 <div class="filters-section">
     {% for filter in [
@@ -35,10 +35,10 @@
 </div>
 
 
-<h2>Why create a Snapchat filter?</h2>
+<div class="section-header">Why create a Snapchat filter?</div>
 <p>Creating a filter for your event generates excitement for attendees who use Snapchat! It's a fun way for people to share their excitement about Hillary and other progressive candidates. The first thing some of your attendees will do at your event will be to take a photo (a snap) and check out if there are any cool filters to apply. Then, they will send it to their friends. A filter makes your event more of a "thing" for people who use Snapchat -- it feels special since it can only be unlocked for a particular time and place.</p>
 
-<h2>How do I make one?</h2>
+<div class="section-header">How do I make one?</div>
 <ol>
     <li>Think of a time (a few hours to a few days is best) and a place (a block to a few blocks). For ideas, see below!</li>
     <li>Choose one of the filters below -- or <a href="https://quip.com/6LlcA6FX4wbJ">make your own</a>.</li>
@@ -54,7 +54,7 @@
     </ol>
 </ol>
 
-<h2>When and where?</h2>
+<div class="section-header">When and where?</div>
     <p>Millennial-vetted ideas for how to use these filters in ways other millennials will appreciate.
     <ul>
         <li>At any campaign event (fundraiser, dinner, rally, speaker, volunteer headquarters, etc)</li>
@@ -64,13 +64,13 @@
     <p>Then, millennials at these events will send pictures with your filter to their friends and feel validated.</p>
 </p>
 
-<h2>What is Snapchat? (for non-millennials)</h2>
+<div class="section-header">What is Snapchat? (for non-millennials)</div>
 <p>Millennials use Snapchat to take selfies (and other pics) that expire in 10 seconds to send their 30 closest friends. When the typical Millennial is out and about, they want to share what they are doing on social media, otherwise it never happened. Using Snapchat Filters in their Snaps lets their friends know where they are, without having to explicitly say where they are. Filters makes photos more fun and adds an element of accomplishment. You have to be in a specific area to unlock certain filters, giving a feeling of instant gratification and achievement.</p>
 
 
 
 
-<h2>Questions? Contributions?</h2>
+<div class="section-header">Questions? Contributions?</div>
 <p>Reach out to me (<a href="https://twitter.com/sophiawestwood">@sophiawestwood</a>) on Twitter with ideas / new filters, or with questions if anything is unclear.</p>
 
 {% endblock %}
