Content: more instructions, update about

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h2>About</h2>
+<div class="section-header">About</div class="section-header">
 <p>A <a href="https://devprogress.us/">DevProgress</a> project under the <a href="http://choosealicense.com/licenses/mit/">MIT License</a>.</p>
 
-<h2>Want to make a filter? Got feedback or ideas?</h2>
-<p>Reach out to me (<a href="https://twitter.com/sophiawestwood">@sophiawestwood</a>) on Twitter.</p>
+<div class="section-header">Want to make a filter? Got feedback or ideas?</div class="section-header">
+<p>Email snapsforprogress@gmail.com, or reach out to me (<a href="https://twitter.com/sophiawestwood">@sophiawestwood</a>) on Twitter! I'd love to add more filters and examples.</p>
 
 {% endblock %}
