--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <div class="filter-name">
             More coming
         </div>
-        <div><i>(check back in a week)</i></div>
+        <div><i>(check back in a week, the designers are hard at work)</i></div>
     </div>
 </div>
 
@@ -39,6 +39,7 @@
 <p>Creating a filter for your event generates excitement for attendees who use Snapchat! It's a fun way for people to share their excitement about Hillary and other progressive candidates. The first thing some of your attendees will do at your event will be to take a photo (a snap) and check out if there are any cool filters to apply. Then, they will send it to their friends. A filter makes your event more of a "thing" for people who use Snapchat -- it feels special since it can only be unlocked for a particular time and place.</p>
 
 <div class="section-header">How do I make one?</div>
+<p>It's best to get started a few hours to a few days before your event, since Snapchat needs time to approve the filter before it goes into effect. In all, setup takes just five minutes and requires no experience -- anyone can do it!</p>
 <ol>
     <li>Think of a time (a few hours to a few days is best) and a place (a block to a few blocks). For ideas, see below!</li>
     <li>Choose one of the filters below -- or <a href="https://quip.com/6LlcA6FX4wbJ">make your own</a>.</li>
@@ -49,8 +50,9 @@
         <li>Select the time range. Then select the geographical area -- make it a little larger than necessary just in case. Preview the price.</li>
         <li>Set the type to "Personal" for your event and pay!</li>
         <li>You will receive an email (usually within an hour or two) saying whether your filter was approved.</li>
-        <li>After it is approved, anyone using Snapchat within the geographical area during the time you set will be able to use your filter!</li>
-        <li>To use the filter, open Snapchat, take a photo, and swipe right -- you should see other filters, and eventually your own! Then you can send it to friends. (Note that sometimes the phone's GPS is inaccurate, so it may not work 100% of the time.)</li>
+        <li>After it is approved, anyone using Snapchat within the geographical area during the time you set will be able to use your filter! Just open Snapchat, take a photo, and swipe right -- you should see other filters, and eventually your own! Then you can send it to friends. (Note that sometimes the phone's GPS is inaccurate, so it may not work 100% of the time.)</li>
+        <li>You can <a href="https://geofilters.snapchat.com/accounts/orders/status/all">check the status</a> of your filter and see how many times it's been used! (The numbers take a day or two to update.)</li>
+        <li>Bonus: Get in touch and share what you did! Email snapsforprogress@gmail.com.</li>
     </ol>
 </ol>
 
@@ -64,13 +66,14 @@
     <p>Then, millennials at these events will send pictures with your filter to their friends and feel validated.</p>
 </p>
 
+<div class="section-header">How much does it cost?</div>
+<p>Expect $5-$10 to cover a building for 10 hours, which should be appropriate for most of your events. The cost starts at $5 and increases based on how long the filter runs for and how large the area is. You'll see an estimate before paying.</p>
+
 <div class="section-header">What is Snapchat? (for non-millennials)</div>
 <p>Millennials use Snapchat to take selfies (and other pics) that expire in 10 seconds to send their 30 closest friends. When the typical Millennial is out and about, they want to share what they are doing on social media, otherwise it never happened. Using Snapchat Filters in their Snaps lets their friends know where they are, without having to explicitly say where they are. Filters makes photos more fun and adds an element of accomplishment. You have to be in a specific area to unlock certain filters, giving a feeling of instant gratification and achievement.</p>
 
 
-
-
-<div class="section-header">Questions? Contributions?</div>
-<p>Reach out to me (<a href="https://twitter.com/sophiawestwood">@sophiawestwood</a>) on Twitter with ideas / new filters, or with questions if anything is unclear.</p>
+<div class="section-header">Questions? Contributions? Feedback?</div>
+<p>Email snapsforprogress@gmail.com! You can also reach out to me (<a href="https://twitter.com/sophiawestwood">@sophiawestwood</a>) on Twitter, I'd love to hear about your event and help out.</p>
 
 {% endblock %}
