--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -132,6 +132,7 @@ p {
         .download {
             text-transform: lowercase;
             font-size: .8em;
+            margin-left: 5px;
         }
     }
     img {
