--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
                     <img src={{ "images/" + example }} width="150px"/>
                 {% endfor %}
             </div>
+        </div>
     {% endfor %}
 
     <div class="filter">
