Add Vote 2016 filter, update wording

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 <p>Open and free to distribute.</p>
 <div class="filters-section">
     {% for filter in [
+        {"name": "Vote 2016", "path": "images/filter-vote-2016.png", "examples": ["filter-vote-2016-example-1.png", "filter-vote-2016-example-2.png"]},
         {"name": "Hope Donkey", "path": "images/filter-hope-donkey.png", "examples": ["filter-hope-donkey-example-1.jpg", "filter-hope-donkey-example-2.jpg", "filter-hope-donkey-example-3.jpg"]}
     ] %}
         <div class="filter">
@@ -31,7 +32,7 @@
         <div class="filter-name">
             More coming
         </div>
-        <div><i>(check back in a week, the designers are hard at work)</i></div>
+        <div><i>Create your own with the instructions below!</i></div>
     </div>
 </div>
 
@@ -40,13 +41,13 @@
 <p>Creating a filter for your event generates excitement for attendees who use Snapchat! It's a fun way for people to share their excitement about Hillary and other progressive candidates. The first thing some of your attendees will do at your event will be to take a photo (a snap) and check out if there are any cool filters to apply. Then, they will send it to their friends. A filter makes your event more of a "thing" for people who use Snapchat -- it feels special since it can only be unlocked for a particular time and place.</p>
 
 <div class="section-header">When and where?</div>
-    <p>Millennial-vetted ideas for how to use these filters in ways other millennials will appreciate.
+    <p>Millennial-vetted ideas for how to use these filters in ways other millennials (or Snapchat users) will appreciate.
     <ul>
         <li>At any campaign event (fundraiser, dinner, rally, speaker, volunteer headquarters, etc)</li>
         <li>At any political event (voter registration drives, debate parties, etc)</li>
         <li>At any event or location with millennials (popular tourist location, college campus, etc)</li>
     </ul>
-    <p>Then, millennials at these events will send pictures with your filter to their friends and feel validated.</p>
+    <p>Then, millennials at these events will send pictures with your filter to their friends!</p>
 </p>
 
 <div class="section-header">How do I make one?</div>
@@ -71,7 +72,7 @@
 <p>Expect $5-$10 to cover a building for 10 hours, which should be appropriate for most of your events. The cost starts at $5 and increases based on how long the filter runs for and how large the area is. You'll see an estimate before paying.</p>
 
 <div class="section-header">What is Snapchat? (for non-millennials!)</div>
-<p>Millennials use Snapchat to take selfies (and other pics) that expire in 10 seconds to send their 30 closest friends. When the typical Millennial is out and about, they want to share what they are doing on social media, otherwise it never happened. Using Snapchat Filters in their Snaps lets their friends know where they are, without having to explicitly say where they are. Filters makes photos more fun and adds an element of accomplishment. You have to be in a specific area to unlock certain filters, giving a feeling of instant gratification and achievement.</p>
+<p>Millennials use Snapchat to take selfies (and other pics) that expire in 10 seconds to send their 30 closest friends. Using Snapchat Filters in their pictures tells their friends where they are, without having to say where they are. Filters makes photos more fun and adds an element of accomplishment. You have to be in a specific area to unlock certain filters, creating a feeling of instant gratification and achievement.</p>
 
 
 <div class="section-header">Questions? Contributions? Feedback?</div>
