--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 <div class="filters-section">
     {% for filter in [
         {"name": "Vote 2016", "path": "images/filter-vote-2016.png", "examples": ["filter-vote-2016-example-1.png", "filter-vote-2016-example-2.png"]},
+        {"name": "Getting Out the Vote", "path": "images/filter-gotv.png", "examples": ["filter-gotv-example-1.png"]},
         {"name": "Hope Donkey", "path": "images/filter-hope-donkey.png", "examples": ["filter-hope-donkey-example-1.jpg", "filter-hope-donkey-example-2.jpg", "filter-hope-donkey-example-3.jpg"]}
     ] %}
         <div class="filter">
