Add my vote matters filter

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     {% for filter in [
         {"name": "Vote 2016", "path": "images/filter-vote-2016.png", "examples": ["filter-vote-2016-example-1.png", "filter-vote-2016-example-2.png"]},
         {"name": "Getting Out the Vote", "path": "images/filter-gotv.png", "examples": ["filter-gotv-example-1.png"]},
-        {"name": "Hope Donkey", "path": "images/filter-hope-donkey.png", "examples": ["filter-hope-donkey-example-1.jpg", "filter-hope-donkey-example-2.jpg", "filter-hope-donkey-example-3.jpg"]}
+        {"name": "Hope Donkey", "path": "images/filter-hope-donkey.png", "examples": ["filter-hope-donkey-example-1.jpg", "filter-hope-donkey-example-2.jpg", "filter-hope-donkey-example-3.jpg"]},
+        {"name": "My Vote Matters", "path": "images/filter-my-vote-matters.png", "examples": []}
     ] %}
         <div class="filter">
             <div class="filter-name">{{ filter.name }}
